--- a/package.json
+++ b/package.json
@@ -9,16 +9,38 @@
     "build": "bun run build.ts"
   },
   "dependencies": {
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@base-ui/react": "^1.2.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@hookform/resolvers": "^5.2.2",
+    "@tanstack/pacer": "^0.19.0",
+    "@tanstack/react-query": "^5.90.21",
     "bun-plugin-tailwind": "^0.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.545.0",
+    "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.34.2",
+    "gsap": "^3.14.2",
+    "immer": "^11.1.4",
+    "input-otp": "^1.4.2",
+    "lightningcss": "^1.31.1",
+    "lucide-react": "^0.574.0",
+    "next-themes": "^0.4.6",
     "react": "^19",
+    "react-day-picker": "^9.13.2",
     "react-dom": "^19",
-    "tailwind-merge": "^3.3.1"
+    "react-hook-form": "^7.71.1",
+    "react-resizable-panels": "^4",
+    "recharts": "2.15.4",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
+    "vaul": "^1.1.2",
+    "zod": "^4.3.6",
+    "zundo": "^2.3.0",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@types/react": "^19",
