--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "bun --hot src/index.ts",
-    "start": "NODE_ENV=production bun src/index.ts",
-    "build": "bun run build.ts"
+    "dev": "bun --bun --hot src/index.ts",
+    "start": "NODE_ENV=production bun --bun src/index.ts",
+    "build": "bun --bun run build.ts",
+    "lint": "eslint .",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@base-ui/react": "^1.2.0",
@@ -24,6 +27,7 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.34.2",
     "gsap": "^3.14.2",
+    "html2canvas": "^1.4.1",
     "immer": "^11.1.4",
     "input-otp": "^1.4.2",
     "lightningcss": "^1.31.1",
@@ -43,10 +47,24 @@
     "zustand": "^5.0.11"
   },
   "devDependencies": {
+    "@eslint/js": "^10.0.1",
+    "@tailwindcss/vite": "^4.2.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@types/bun": "latest",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/bun": "latest",
+    "@vitest/ui": "^4.0.18",
+    "eslint": "^10.0.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.5.0",
+    "globals": "^17.3.0",
+    "happy-dom": "^20.6.2",
     "tailwindcss": "^4.1.11",
-    "tw-animate-css": "^1.4.0"
+    "tw-animate-css": "^1.4.0",
+    "typescript-eslint": "^8.56.0",
+    "vite-tsconfig-paths": "^6.1.1",
+    "vitest": "^4.0.18"
   }
 }
